force-app/main/default/objects/Account/fields/Account_Age__c.field-meta.xml
<CustomField>
    <fullName>Account_Age__c</fullName>
    <formula>FLOOR(
        (
            (YEAR(TODAY()) - YEAR(Initial_Opp_Won__c)) * 12 +
            (MONTH(TODAY()) - MONTH(Initial_Opp_Won__c)) -
            IF(DAY(TODAY()) &lt; DAY(Initial_Opp_Won__c), 1, 0)
        )
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>