force-app/main/default/objects/Account/fields/Account_Planning__c.field-meta.xml
<CustomField>
    <fullName>Account_Planning__c</fullName>
    <label>Account Planning</label>
    <type>Url</type>
</CustomField>