force-app/main/default/objects/Account/fields/Account_Products__c.field-meta.xml
<CustomField>
    <fullName>Account_Products__c</fullName>
    <label>Account Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Products</valueSetName>
    </valueSet>
</CustomField>