force-app/main/default/objects/Account/fields/Account_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Account_Subtype__c</fullName>
    <label>Account Subtype</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fluid</fullName>
            </value>
            <value>
                <fullName>Powder</fullName>
            </value>
            <value>
                <fullName>Warehousing</fullName>
            </value>
            <value>
                <fullName>Blending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>