force-app/main/default/objects/Account/fields/Account_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Account_Timezone__c</fullName>
    <inlineHelpText>Account TimeZone, Updated from Hubspot</inlineHelpText>
    <label>Account Timezone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>