force-app/main/default/objects/Account/fields/ACO_Affiliations__c.field-meta.xml
<CustomField>
    <fullName>ACO_Affiliations__c</fullName>
    <label>ACO Affiliations</label>
    <length>254</length>
    <type>Text</type>
</CustomField>