force-app/main/default/objects/Account/fields/Ambulatory_EMR__c.field-meta.xml
<CustomField>
    <fullName>Ambulatory_EMR__c</fullName>
    <label>Ambulatory EMR</label>
    <length>254</length>
    <type>Text</type>
</CustomField>