force-app/main/default/objects/Account/fields/Amount_Owed_Syspro__c.field-meta.xml
<CustomField>
    <fullName>Amount_Owed_Syspro__c</fullName>
    <label>Amount Owed (Syspro)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>