force-app/main/default/objects/Account/fields/ap_terms__c.field-meta.xml
<CustomField>
    <fullName>ap_terms__c</fullName>
    <label>AP_Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>