force-app/main/default/objects/Account/fields/Average_Daily_Cencus__c.field-meta.xml
<CustomField>
    <fullName>Average_Daily_Cencus__c</fullName>
    <label>Average Daily Cencus</label>
    <length>100</length>
    <type>Text</type>
</CustomField>