force-app/main/default/objects/Account/fields/Bombora_Account_Score__c.field-meta.xml
<CustomField>
    <fullName>Bombora_Account_Score__c</fullName>
    <inlineHelpText>Account Score from Bombora for Topic Consumptions across all topics</inlineHelpText>
    <label>Bombora Account Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>