force-app/main/default/objects/Account/fields/Bombora_Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Bombora_Company_Size__c</fullName>
    <inlineHelpText>Field gets imported from bombora based on Website URL match</inlineHelpText>
    <label>Bombora Company Size</label>
    <length>100</length>
    <type>Text</type>
</CustomField>