force-app/main/default/objects/Account/fields/Bombora_Industry__c.field-meta.xml
<CustomField>
    <fullName>Bombora_Industry__c</fullName>
    <inlineHelpText>Industry Classification from Bombora</inlineHelpText>
    <label>Bombora Industry</label>
    <length>100</length>
    <type>Text</type>
</CustomField>