force-app/main/default/objects/Account/fields/Bombora_Topic_Count__c.field-meta.xml
<CustomField>
    <fullName>Bombora_Topic_Count__c</fullName>
    <label>Bombora Topic Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>