force-app/main/default/objects/Account/fields/Bombora_Topic_Count_Delta__c.field-meta.xml
<CustomField>
    <fullName>Bombora_Topic_Count_Delta__c</fullName>
    <inlineHelpText>Topic Count Delta from Bombora</inlineHelpText>
    <label>Bombora Topic Count Delta</label>
    <length>20</length>
    <type>Text</type>
</CustomField>