force-app/main/default/objects/Account/fields/BPCI_Advanced_Model_Participant__c.field-meta.xml
<CustomField>
    <fullName>BPCI_Advanced_Model_Participant__c</fullName>
    <label>BPCI Advanced Model Participant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>