force-app/main/default/objects/Account/fields/Channel_Rep_Association__c.field-meta.xml
<CustomField>
    <fullName>Channel_Rep_Association__c</fullName>
    <label>Channel Rep Association</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SF:REP1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>