force-app/main/default/objects/Account/fields/CommercientSF__Commercient_ArCustomerCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Commercient_ArCustomerCode__c</fullName>
    <description>This contains an alternative customer code from an external ERP package. This is a code you can index on in addition to the Commercient CustomerGUID. If the ERP package is Syspro this will typically be the ArCustomer.Customer code.</description>
    <externalId>true</externalId>
    <label>Commercient ArCustomerCode</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>