force-app/main/default/objects/Account/fields/CommercientSF__Commercient_CustomerGUID2__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Commercient_CustomerGUID2__c</fullName>
    <label>Commercient CustomerGUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>