force-app/main/default/objects/Account/fields/CommercientSF__Syspro_AP_Supplier__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Syspro_AP_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Syspro AP Supplier</label>
    <referenceTo>CommercientSF__ApSupplier__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>