force-app/main/default/objects/Account/fields/Date_Moved_to_Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>Date_Moved_to_Closed_Won__c</fullName>
    <label>Date Moved to Closed Won</label>
    <type>Date</type>
</CustomField>