force-app/main/default/objects/Account/fields/Definitive_Network_Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>Definitive_Network_Parent_ID__c</fullName>
    <label>Definitive Network Parent ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>