force-app/main/default/objects/Account/fields/Defintive_IDN_ID__c.field-meta.xml
<CustomField>
    <fullName>Defintive_IDN_ID__c</fullName>
    <label>Defintive IDN ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>