force-app/main/default/objects/Account/fields/EHR_EMR_Ambulatory__c.field-meta.xml
<CustomField>
    <fullName>EHR_EMR_Ambulatory__c</fullName>
    <label>EHR/EMR - Ambulatory</label>
    <length>100</length>
    <type>Text</type>
</CustomField>