force-app/main/default/objects/Account/fields/EHR_EMR_In_Patient__c.field-meta.xml
<CustomField>
    <fullName>EHR_EMR_In_Patient__c</fullName>
    <label>EHR/EMR - In Patient</label>
    <length>100</length>
    <type>Text</type>
</CustomField>