force-app/main/default/objects/Account/fields/Externalid__c.field-meta.xml
<CustomField>
    <fullName>Externalid__c</fullName>
    <inlineHelpText>External ID Fields Mapped for HubSpot Customer ID</inlineHelpText>
    <label>HUbSpot Customer ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>