force-app/main/default/objects/Account/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facility</label>
    <type>Checkbox</type>
</CustomField>