force-app/main/default/objects/Account/fields/Finance_Department_Budget__c.field-meta.xml
<CustomField>
    <fullName>Finance_Department_Budget__c</fullName>
    <label>Finance Department Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>