force-app/main/default/objects/Account/fields/Firm_Type__c.field-meta.xml
<CustomField>
    <fullName>Firm_Type__c</fullName>
    <inlineHelpText>Data from Definitive</inlineHelpText>
    <label>Firm Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>