force-app/main/default/objects/Account/fields/FPSA_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Billing Contact to be set at Invoice Header</description>
    <inlineHelpText>Required to be filled when generating the HubSpot Rider Letter.</inlineHelpText>
    <label>Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>