force-app/main/default/objects/Account/fields/FPSA_Is_Public__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Is_Public__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Company Is Public</inlineHelpText>
    <label>Is Public</label>
    <type>Checkbox</type>
</CustomField>