force-app/main/default/objects/Account/fields/FPSA_NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>FPSA_NAICS_Code__c</fullName>
    <inlineHelpText>NAICS code from Zoom</inlineHelpText>
    <label>NAICS Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>