force-app/main/default/objects/Account/fields/FPSA_of_Discharges__c.field-meta.xml
<CustomField>
    <fullName>FPSA_of_Discharges__c</fullName>
    <inlineHelpText>Number of Discharges</inlineHelpText>
    <label># of Discharges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>