force-app/main/default/objects/Account/fields/Geographic_Classification__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Classification__c</fullName>
    <label>Geographic Classification</label>
    <length>100</length>
    <type>Text</type>
</CustomField>