force-app/main/default/objects/Account/fields/GPO_Affiliations__c.field-meta.xml
<CustomField>
    <fullName>GPO_Affiliations__c</fullName>
    <label>GPO Affiliations</label>
    <length>254</length>
    <type>Text</type>
</CustomField>