force-app/main/default/objects/Account/fields/Group_Practice_PAC_ID__c.field-meta.xml
<CustomField>
    <fullName>Group_Practice_PAC_ID__c</fullName>
    <label>Group Practice PAC ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>