force-app/main/default/objects/Account/fields/HIE_Affiliations__c.field-meta.xml
<CustomField>
    <fullName>HIE_Affiliations__c</fullName>
    <label>HIE Affiliations</label>
    <length>254</length>
    <type>Text</type>
</CustomField>