force-app/main/default/objects/Account/fields/Hospital_Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Parent_Name__c</fullName>
    <label>Hospital Parent Name</label>
    <length>254</length>
    <type>Text</type>
</CustomField>