force-app/main/default/objects/Account/fields/Hospital_Type__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Type__c</fullName>
    <inlineHelpText>Data from Definitive</inlineHelpText>
    <label>Hospital Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>