force-app/main/default/objects/Account/fields/HR_Department_Budget__c.field-meta.xml
<CustomField>
    <fullName>HR_Department_Budget__c</fullName>
    <label>HR Department Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>