force-app/main/default/objects/Account/fields/Hubspot_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Record_Id__c</fullName>
    <description>This is External Id field for Hubspot Record Id</description>
    <externalId>true</externalId>
    <inlineHelpText>This is External Id field for Hubspot Record Id</inlineHelpText>
    <label>Hubspot Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>