force-app/main/default/objects/Account/fields/IDN__c.field-meta.xml
<CustomField>
    <fullName>IDN__c</fullName>
    <inlineHelpText>Defintiive IDN</inlineHelpText>
    <label>IDN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>