force-app/main/default/objects/Account/fields/IDN_Parent__c.field-meta.xml
<CustomField>
    <fullName>IDN_Parent__c</fullName>
    <label>IDN Parent</label>
    <length>80</length>
    <type>Text</type>
</CustomField>