force-app/main/default/objects/Account/fields/Initial_Opp_Won__c.field-meta.xml
<CustomField>
    <fullName>Initial_Opp_Won__c</fullName>
    <label>Initial Opp Won</label>
    <type>Date</type>
</CustomField>