force-app/main/default/objects/Account/fields/Linked_In_Bio__c.field-meta.xml
<CustomField>
    <fullName>Linked_In_Bio__c</fullName>
    <inlineHelpText>Linked In Bio (Enriched from Hubspot)</inlineHelpText>
    <label>Linked In Bio</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>