force-app/main/default/objects/Account/fields/List_ID__c.field-meta.xml
<CustomField>
    <fullName>List_ID__c</fullName>
    <externalId>true</externalId>
    <label>Definitive ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>