force-app/main/default/objects/Account/fields/Main_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Main_Specialty__c</fullName>
    <inlineHelpText>Main Specialty from Definitive</inlineHelpText>
    <label>Main Specialty</label>
    <length>254</length>
    <type>Text</type>
</CustomField>