force-app/main/default/objects/Account/fields/Management_Service_Organization__c.field-meta.xml
<CustomField>
    <fullName>Management_Service_Organization__c</fullName>
    <label>Management Service Organization</label>
    <length>254</length>
    <type>Text</type>
</CustomField>