force-app/main/default/objects/Account/fields/Marketing_List__c.field-meta.xml
<CustomField>
    <fullName>Marketing_List__c</fullName>
    <label>Marketing List</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2022 Focus Accounts- DocQmentor</fullName>
            </value>
            <value>
                <fullName>2022 Focus Accounts- Staffing</fullName>
            </value>
            <value>
                <fullName>2022 Focus Accounts- Analytics</fullName>
            </value>
            <value>
                <fullName>2022 Focus Accounts- Salesforce</fullName>
            </value>
            <value>
                <fullName>Ambulatory Scheduling</fullName>
            </value>
            <value>
                <fullName>Congestive Heart Failure</fullName>
            </value>
            <value>
                <fullName>Critical Care</fullName>
            </value>
            <value>
                <fullName>Emergency Department</fullName>
            </value>
            <value>
                <fullName>Emergency Dept</fullName>
            </value>
            <value>
                <fullName>ERAS</fullName>
            </value>
            <value>
                <fullName>Operating Room Efficiency</fullName>
            </value>
            <value>
                <fullName>Operational Excellence</fullName>
            </value>
            <value>
                <fullName>Pediatric Respiratory And Sepsis</fullName>
            </value>
            <value>
                <fullName>Physician Practice Management</fullName>
            </value>
            <value>
                <fullName>Quality and Safety</fullName>
            </value>
            <value>
                <fullName>Sickle Cell</fullName>
            </value>
            <value>
                <fullName>Talent Management</fullName>
            </value>
            <value>
                <fullName>Vancomycin</fullName>
            </value>
            <value>
                <fullName>CIO - HIMMS</fullName>
            </value>
            <value>
                <fullName>ICU</fullName>
            </value>
            <value>
                <fullName>ED</fullName>
            </value>
            <value>
                <fullName>COO</fullName>
            </value>
            <value>
                <fullName>Jeremy Campaign</fullName>
            </value>
            <value>
                <fullName>SDR_ICU_Directors</fullName>
            </value>
            <value>
                <fullName>SDR_icu_meddirector</fullName>
            </value>
            <value>
                <fullName>SDR_robert_brownd</fullName>
            </value>
            <value>
                <fullName>SDR_ryan_yockey</fullName>
            </value>
            <value>
                <fullName>SDR_Tableau_lanzalotto</fullName>
            </value>
            <value>
                <fullName>OR_LIST_ASC</fullName>
            </value>
            <value>
                <fullName>Imaging_Center_Burn_List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>