force-app/main/default/objects/Account/fields/Medicare_Charges__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Charges__c</fullName>
    <label>Medicare Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>