force-app/main/default/objects/Account/fields/Medicate_Allowed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Medicate_Allowed_Amount__c</fullName>
    <label>Medicate Allowed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>