force-app/main/default/objects/Account/fields/Medicate_Payment__c.field-meta.xml
<CustomField>
    <fullName>Medicate_Payment__c</fullName>
    <label>Medicate Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>