force-app/main/default/objects/Account/fields/MSA__c.field-meta.xml
<CustomField>
    <fullName>MSA__c</fullName>
    <label>MSA</label>
    <type>Url</type>
</CustomField>