force-app/main/default/objects/Account/fields/NDA__c.field-meta.xml
<CustomField>
    <fullName>NDA__c</fullName>
    <label>NDA</label>
    <type>Url</type>
</CustomField>