force-app/main/default/objects/Account/fields/Net_Patient_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Net_Patient_Revenue__c</fullName>
    <inlineHelpText>Definitive Net Patient Revenue</inlineHelpText>
    <label>Net Patient Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>