force-app/main/default/objects/Account/fields/Network_ID__c.field-meta.xml
<CustomField>
    <fullName>Network_ID__c</fullName>
    <label>Network ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>