force-app/main/default/objects/Account/fields/Network_Name__c.field-meta.xml
<CustomField>
    <fullName>Network_Name__c</fullName>
    <label>Network Name</label>
    <length>254</length>
    <type>Text</type>
</CustomField>