force-app/main/default/objects/Account/fields/NPI_Number__c.field-meta.xml
<CustomField>
    <fullName>NPI_Number__c</fullName>
    <label>NPI Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>