force-app/main/default/objects/Account/fields/of_Clinical_Trials__c.field-meta.xml
<CustomField>
    <fullName>of_Clinical_Trials__c</fullName>
    <label># of Clinical Trials</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>