force-app/main/default/objects/Account/fields/of_Contacts__c.field-meta.xml
<CustomField>
    <fullName>of_Contacts__c</fullName>
    <label># of Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>