force-app/main/default/objects/Account/fields/of_Group_Members_in_practice__c.field-meta.xml
<CustomField>
    <fullName>of_Group_Members_in_practice__c</fullName>
    <label># of Group Members in practice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>