force-app/main/default/objects/Account/fields/of_Hospitals__c.field-meta.xml
<CustomField>
    <fullName>of_Hospitals__c</fullName>
    <label># of Hospitals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>