force-app/main/default/objects/Account/fields/of_Medicare_Procedures__c.field-meta.xml
<CustomField>
    <fullName>of_Medicare_Procedures__c</fullName>
    <label># of Medicare Procedures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>