force-app/main/default/objects/Account/fields/of_Physician_Groups__c.field-meta.xml
<CustomField>
    <fullName>of_Physician_Groups__c</fullName>
    <label># of Physician Groups</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>