force-app/main/default/objects/Account/fields/of_Physicians__c.field-meta.xml
<CustomField>
    <fullName>of_Physicians__c</fullName>
    <label># of Physicians</label>
    <length>20</length>
    <type>Text</type>
</CustomField>