force-app/main/default/objects/Account/fields/of_Staffed_Beds__c.field-meta.xml
<CustomField>
    <fullName>of_Staffed_Beds__c</fullName>
    <label># of Staffed Beds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>