force-app/main/default/objects/Account/fields/Other_details__c.field-meta.xml
<CustomField>
    <fullName>Other_details__c</fullName>
    <description>all the other consolidated details on account .
So that Admin can put all the extra values( which are not in Account&apos;s schema) in this field using Data loader.</description>
    <label>Other details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>