force-app/main/default/objects/Account/fields/Other_Specialities__c.field-meta.xml
<CustomField>
    <fullName>Other_Specialities__c</fullName>
    <label>Other Specialities</label>
    <length>254</length>
    <type>Text</type>
</CustomField>